# discord-cache-cleaner

./: Cargo.toml  LICENSE  README.md  renovate.json
.github/: renovate.json
.github/workflows/: cargo.yml  release.yml
src/: main.rs
src/os/: mac_os.rs  mod.rs
